build: continued organizing HTML into reusable <template>s. added bottom toolbar. next: build structure for calendar pannel

--- a/style.css
+++ b/style.css
@@ -58,5 +58,9 @@ p {
 	overflow-wrap: break-word;
 	hyphens: auto;
 }
+.hidden {
+	display: none;
+}
 /* ============================================*/
+
 
