build: calendar toolbar, dropdown for task schedule and task due date

--- a/templates/day-templates.html
+++ b/templates/day-templates.html
@@ -1,28 +1,35 @@
 <template id="task-box">
     <!-- SCRIPT: add color from list -->
     <button class="task-box" type="button">
-        <!-- SCRIPT: get name, start/end time, info from task/event object -->
+        <!-- SCRIPT: get name, start/end time, info from task object -->
     </button>    
 </template>
 
 <template id="event-box">
     <!-- SCRIPT: add color from list -->
     <button class="event-box" type="button">
-        <!-- SCRIPT: get name, start/end time, info from task/event object -->
+        <!-- SCRIPT: get name, start/end time, info from event object -->
     </button>    
 </template>
 
 <template id="timer-box">
     <!-- SCRIPT: add color from list -->
     <button class="timer-box" type="button">
-        <!-- SCRIPT: get name, start/end time, info from task/event object -->
+        <!-- SCRIPT: get name, start/end time, info from task object -->
     </button>    
 </template>
 
-<template id="measurement">
+<template id="variable-button">
     <!-- SCRIPT: add color from list -->
-    <button class="measurement" type="button">
-        <!-- SCRIPT: get name, info from measurement object -->
+    <button class="variable-button" type="button">
+        <!-- SCRIPT: get name, info from variable object -->
+    </button>    
+</template>
+
+<template id="routine-button">
+    <!-- SCRIPT: add color from list -->
+    <button class="routine-button" type="button">
+        <!-- SCRIPT: get name, info from routine object -->
     </button>    
 </template>
 
@@ -50,3 +57,12 @@
     <span id="12am" class="time-label">12am</span>
 </template>
 
+<template id="now-label"> 
+    <span> <!-- GET NOW'S TIME --> </span>
+    <span>○</span>
+    <!-- line indicated by highlighting closest grid line -->
+</template>
+
+<template id="comparison-day">
+<!-- TODO LATER -->
+</template>
