--- a/templates/variable-template.html
+++ b/templates/variable-template.html
@@ -1,21 +1,21 @@
-<template id="measurement">
-    <div id="measurement-">
-        <div class="measurement-bar">
-            <div class="measurement-bar left">
-                <!-- hide if new measurement -->
-                <form class="measurement" id="measurement-form-widget-" action="2did.com/user/todos" method="post">
+<template id="variable">
+    <div id="variable-">
+        <div class="variable-bar">
+            <div class="variable-bar left">
+                <!-- hide if new variable -->
+                <form class="variable" id="variable-form-widget-" action="2did.com/user/todos" method="post">
                     <!-- widget is greyed out by default -->
                     <!-- widget turns green when goal met -->
                     <!-- widget turns red if goal not met -->
                     
                     <!-- if type=boolean, show after initial save-->
-                    <div class="measurement bool-widget hidden">
-                        <!-- <input class="measurement-boolean" id="measurement-boolean-" name="measurement-boolean" type="checkbox" /> -->
+                    <div class="variable bool-widget hidden">
+                        <!-- <input class="variable-boolean" id="variable-boolean-" name="variable-boolean" type="checkbox" /> -->
                     </div>
                                        
                     <!-- if type=count, show after initial save-->
-                    <div class="measurement count-widget hidden">
-                        <input class="measurement-count" id="measurement-count-" name="measurement-count" type="number" placeholder="0" />
+                    <div class="variable count-widget hidden">
+                        <input class="variable-count" id="variable-count-" name="variable-count" type="number" placeholder="0" />
                         <!-- when clicked, hide and reveal opposite -->
                         <button class="hidden" id="decrement-count-" type="button">
                             -
@@ -26,8 +26,8 @@
                     </div>
 
                     <!-- if type=rating, show after initial save-->
-                    <div class="measurement rate-widget hidden">
-                        <input class="measurement-rating" id="measurement-rating-" name="measurement-rating" type="range" list="number-labels" min="1" max="5" />
+                    <div class="variable rate-widget hidden">
+                        <input class="variable-rating" id="variable-rating-" name="variable-rating" type="range" list="number-labels" min="1" max="5" />
                         <datalist id="number-labels">
                             <option value="1">1</option>
                             <option value="5">5</option>
@@ -35,12 +35,12 @@
                     </div>
                 </form> 
                 
-                <form class="measurement" id="measurement-form-title-" action="2did.com/user/todos" method="post">
-                    <!-- IF EXISTING measurement, GET VALUE FROM measurement_OBJECT -->
-                    <input class="measurement title" id="measurement-title-" name="measurement-title" type="text" placeholder="+ measurement" value="measurement_TITLE" />
+                <form class="variable" id="variable-form-title-" action="2did.com/user/todos" method="post">
+                    <!-- IF EXISTING variable, GET VALUE FROM variable_OBJECT -->
+                    <input class="variable title" id="variable-title-" name="variable-title" type="text" placeholder="+ variable" value="variable_TITLE" />
                 </form>        
             </div>
-            <div class="measurement-bar right hidden">
+            <div class="variable-bar right">
                 <!-- when any indicator is clicked,  opens edit view for that property + save-changes at end -->
                 <!-- all are hidden unless corresponding object property != 'set' --> 
                 <button class="list indicator hidden" type="button">
@@ -50,49 +50,49 @@
                 </button>
                 <button class="goal indicator hidden" type="button">
                     <img class="goal indicator" src="./images/prospective-left/todo-components/goal.svg">
-                    <!-- GET GOAL FROM measurement OBJECT -->
+                    <!-- GET GOAL FROM variable OBJECT -->
                 </button>
                 <button class="schedule indicator hidden" type="button">
                     <img class="schedule indicator" src="./images/prospective-left/todo-components/date.svg">
-                    <!-- GET SCHEDULE FROM measurement OBJECT -->
+                    <!-- GET SCHEDULE FROM variable OBJECT -->
                 </button>
             </div>
         </div>
-        <!-- if measurement has just been created: APPEND measurement_EDIT TEMPLATE, open all edit dropdowns -->
-        <!-- for each class of measurement object, if value: APPEND measurement_EDIT TEMPLATE, make corresponding icon active & open corresponding edit dropdown -->
+        <!-- if variable has just been created: APPEND variable_EDIT TEMPLATE, open all edit dropdowns -->
+        <!-- for each class of variable object, if value: APPEND variable_EDIT TEMPLATE, make corresponding icon active & open corresponding edit dropdown -->
     </div>
 </template>
 
 <!-- --------------------------------------------------------------------------------------------------------------- -->
 
-<template id="measurement-edit">
-    <!-- when edit-component edited (and has value), make corresponding icon in measurement-bar active -->
-    <!-- upon save, hide all dropdowns that correspond to an empty measurement object property -->
-    <form id="measurement-form-details-" class="measurement" action="2did.com/user/todos" method="post">       
-        <!-- show only if new measurement or on form-title click -->
+<template id="variable-edit">
+    <!-- when edit-component edited (and has value), make corresponding icon in variable-bar active -->
+    <!-- upon save, hide all dropdowns that correspond to an empty variable object property -->
+    <form id="variable-form-details-" class="variable" action="2did.com/user/todos" method="post">       
+        <!-- show only if new variable or on form-title click -->
         <section class="edit-component hidden">
             <div id="varible-icons-options">
-                <!-- will dynamically generate icons listed in "./images/measurement-icons" -->
+                <!-- will dynamically generate icons listed in "./images/variable-icons" -->
             </div>
         </section>
         <section class="edit-component hidden">
-            <div id="measurement-type-">
-                <ul>Measurement Type:
+            <div id="variable-type-">
+                <ul>variable Type:
                     <li>
-                        <label for="measurement-type-boolean-">
-                            <input id="measurement-type-boolean-" name="measurement-type" type="radio" required />
+                        <label for="variable-type-boolean-">
+                            <input id="variable-type-boolean-" name="variable-type" type="radio" required />
                             Boolean
                         </label>
                     </li>
                     <li>
-                        <label for="measurement-type-count-">
-                            <input id="measurement-type-count-" name="measurement-type" type="radio" required />
+                        <label for="variable-type-count-">
+                            <input id="variable-type-count-" name="variable-type" type="radio" required />
                             Count
                         </label>
                     </li>
                     <li>
-                        <label for="measurement-type-rating-">
-                            <input id="measurement-type-rating-" name="measurement-type" type="radio" required />
+                        <label for="variable-type-rating-">
+                            <input id="variable-type-rating-" name="variable-type" type="radio" required />
                             Rating
                         </label>
                     </li>
@@ -135,7 +135,7 @@
             <div class="single-line">
                 <img class="reminder icon inactive" src="./images/prospective-left/todo-components/reminder.svg" />
                 <span>Reminder</span> 
-                <input class="add-reminder" id="task-reminder-time-" name="task-reminder-time-" type="time" value="" />   
+                <input class="add-reminder" id="task-reminder-time-" name="task-reminder-time-" type="time" step="300" value="" />   
                 <div class="reminder">
                     <!-- APPEND REMINDER LIST FROM VAR OBJECT -->
                     <button type="button">
